# CUHK-courses

./: README.md
CENG3420/lab2/: ~$estion.docx  新建 Text Document.txt
CENG3420/lab3/: questions.docx
CSCI2100/: proj report draft.docx  proj report.docx
CSCI2100/MHunter/: draft.md  (+9 more)
CSCI3100/asg3/asgn_3_package_sol/: pyproject.toml
CSCI3100/asg3/asgn_3_package_sol/no_thread_question_src/asgn_3_package/: pokeman.py  pokeman_gym.py
CSCI3100/asg3/asgn_3_package_sol/question_src/asgn_3_package/: battle_system.py
CSCI3100/asg3/asgn_3_package_sol/solution_1_src/asgn_3_package/: pokeman.py  pokeman_gym.py  training.py
CSCI3100/asg3/asgn_3_package_sol/solution_2_src/asgn_3_package/: pokeman.py  pokeman_gym.py  training.py
CSCI3100/asg3/asgn_3_package_sol/solution_3_src/: main.py
CSCI3100/asg3/asgn_3_package_sol/solution_3_src/asgn_3_package/: softeng_pokeman_trainer.py
CSCI3100/asg3/asgn_3_package_sol/solution_4_src/: main.py
CSCI3100/asg3/asgn_3_package_sol/solution_4_src/asgn_3_package/: battle_system.py  pokeman.py
CSCI3100/asg4/asgn_4_package_sol/: README.md  pyproject.toml
CSCI3100/asg4/asgn_4_package_sol/profiling/: profile_main.py
CSCI3100/asg4/asgn_4_package_sol/src/: main.py
CSCI3100/asg4/asgn_4_package_sol/src/asgn_4_package/: lib_raw.py
CSCI3100/asg4/asgn_4_package_sol/tests/: test_lib_benchmark.py  test_lib_raw.py
CSCI3150/: git.docx
CSCI3320/: 新建 Microsoft Word 文档.docx
ESTR1002/: estr1002_info.pages
IERG1000/: IERG1000_gen_inf.pages  TCPIP详解 卷1协议 alias  TCPIP详解 卷2实现 alias
MCM2023/: md.md  ~$论文.docx  论文 (now).docx  论文.docx
(+1035 files in other folders)
