[project]
name = "asgn-3-package"
version = "0.1.0"
description = ""
authors = [
    {name = "Kuromi Chiikawa",email = "kuromi.platform712@passmail.net"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "asgn_3_package", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-benchmark = "^5.1.0"
pytest-cov = "^6.0.0"
black = "^25.1.0"
pylint = "^3.3.6"
ruff = "^0.11.2"
pytest-mock = "^3.14.0"
pyprof2calltree = "^1.4.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
