[project]
name = "asgn-4-package"
version = "0.1.0"
description = ""
authors = [
    {name = "tklam",email = "argama@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-benchmark (>=5.1.0,<6.0.0)",
    "pytest-cov (>=6.1.1,<7.0.0)"
]

[tool.poetry]
packages = [{include = "asgn_4_package", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.packages.find]
where = [
    "src"
]
